# visual.py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py  visual.py.code-workspace
.github/workflows/: python-package.yml
src/: __init__.py  cfg.py  pydantic_ext.py  pyplot.py  server.py
src/extra/: __init__.py
src/models/: __init__.py  color.py  current_state.py  point.py
visual_py/: __init__.py  pyplot.py  server.py
visual_py/extra/: get_index_html.py  links.py
